# R-type

./: .clang-format  .gitignore  CMakeLists.txt  CPackConfig.cmake  README.md  build.sh  vcpkg.json
.Build/: CMakeCache.txt  Makefile  cmake_install.cmake
.Build/lib/: Makefile  cmake_install.cmake
.Build/src/: Makefile  cmake_install.cmake
.Build/src/client/: Makefile  cmake_install.cmake  r-type_client
.Build/src/server/: Makefile  cmake_install.cmake  r-type_server
.Build/tests/: Makefile  MyTests  cmake_install.cmake
.github/workflows/: cmake-multi-platform.yml  codeql.yml  mirror.yml
assets/: level1design.txt  level2design.txt  level3design.txt  map.txt
configFiles/: background.json  bar.json  bullet.json  cheatCode.json  enemies.json  explosion.json  generate.json  life.json  menu.json  pattern.json  powerup.json  score.json  starship.json
docs/: 404.md  Doxyfile  Game.md  HowToLaunchTheGame.md  HowToPlay.md  How_to_play.md  _config.yml  devdoc.md  doxygenMain.md  ecs.md  enemies.md  ennemies.md  ennemies_dev.md  ennemies_player_doc.md  gamecontent.md  gamemodes.md  githubpages.md  index.md  level_as_file.md  network.md  powerups.md  rfc.md  userdoc.md  weapons.md  wiki.md
docs/ecs/: components.md  ecs.md  system.md
docs/html/html/: Client_8hpp_source.html  Components_8hpp_source.html  annotated.html  (+142 more)
index/: Client.cpp.A451CDD7C5CB22E6.idx  Components.cpp.1E30BC7334FA7EF7.idx  Components.hpp.3EBC358F8A2C2C10.idx  Comportment.hpp.4F985A878B0EEE29.idx  ComportmentParser.cpp.C11942BA879D7EF0.idx  Game.cpp.60F92585B827DD80.idx  Game.cpp.A9594943BF2B5E3B.idx  Game.hpp.8264C8DD9CE14AC3.idx  GameEngine.cpp.1B7C4FC50B598272.idx  GameEngine.hpp.FB683B4C935105FB.idx  GenerateMap.cpp.D1A1A253E2484BF7.idx  Graphic.cpp.CDADBAFEF71AAC40.idx  HandlingEcs.cpp.2A4FEA173D6BA2A0.idx  JsonParser.cpp.6D2213A4FE019C7F.idx  JsonParser.hpp.409E380430479564.idx  MapLevel.hpp.593B1C23A5BC858A.idx  MapParser.cpp.381FCE7EC62D3A43.idx  Mob.hpp.9ECB82D0BF4B8B89.idx  MobParser.cpp.2D5FE2462E7965FB.idx  Network.cpp.2E301BE683FCDE88.idx  Network.cpp.42449BB5A776B15E.idx  Network.hpp.67B85D60EBC2EEC6.idx  Network.hpp.E294BEA4358B58DA.idx  Registry.cpp.75C5D413A5693D68.idx  Registry.hpp.9AA343EC5CC41C82.idx  Server.cpp.1628C56528C3FF08.idx  SparseArray.hpp.90535E8D2CB5D7E0.idx  System.cpp.FFE164ECE50DDDF8.idx  System.hpp.E5D076AF0534D88C.idx  TestClassPlayer.cpp.2C3BE668076BA915.idx  TestClassPlayer.cpp.AEEDFF5BAF82ED85.idx  TestClassPlayer.hpp.8259E277FB4671D7.idx  TestClassPlayer.hpp.FDDEDA4E18A3CEDD.idx  comportment.hpp.523396EABA870832.idx  comportment_parser.cpp.1108C4BCAA177551.idx  generate_map.cpp.820F61AB657093F1.idx  handlingEcs.cpp.939DA7E66D647FB5.idx  jsonparser.cpp.37DA3B8718622958.idx  jsonparser.hpp.6ABB1EA552DF1D77.idx  map_level.hpp.FAEF3300C8DDA914.idx  (+3 more)
jsonfile/: comportment.json  map1.json  map_doc.md
jsonfile/include/: comportment.hpp  jsonparser.hpp  map_level.hpp  mob.hpp
jsonfile/json/: mob.json
jsonfile/src/: comportment_parser.cpp  generate_map.cpp  jsonparser.cpp  map_parser.cpp  mob_parser.cpp
lib/: CMakeLists.txt
src/: Path.hpp  Path.hpp.in  main.cpp
src/client/: CMakeLists.txt  Client.cpp  client.cpp  client.hpp  r-type_client
src/client/ecs/: CMakeLists.txt  EcsCore.cpp  EcsCore.hpp  Entity.hpp  Registry.cpp  Registry.hpp  SparseArray.cpp  SparseArray.hpp
src/client/ecs/Components/: Components.cpp  Components.hpp
src/client/ecs/ComponentsArray/: CMakeLists.txt  SparseArray.cpp  SparseArray.hpp
src/client/ecs/ComponentsArray/Components/: CMakeLists.txt  Components.hpp
src/client/ecs/ComponentsArray/Systems/: CMakeLists.txt  System.cpp  System.hpp
src/client/game/: CMakeLists.txt
src/client/gameEngine/: CMakeLists.txt  GameEngine.cpp  GameEngine.hpp  game.hpp  gameEngine.cpp  gameEngine.hpp
src/client/gameEngine/game/: CMakeLists.txt
src/client/gameEngine/game/gameInitialisation/: initBullets.cpp  initEnemy.cpp  initMiscellaneous.cpp  initStarship.cpp
src/client/gameEngine/game/gameLogic/: animation.cpp  level1.cpp  miscellaneous.cpp  shoot.cpp
src/client/gameEngine/graphics/: CMakeLists.txt  graphic.cpp
src/client/graphics/: CMakeLists.txt  graphic.cpp  save.cpp
src/client/network/: CMakeLists.txt  Network.cpp  Network.hpp  StructToBit.cpp  StructToBit.hpp  SystemOUT.cpp  TestClassPlayer.cpp  testClassPlayer.cpp  testClassPlayer.hpp
src/ecs/: Registry.cpp  Registry.hpp  sparse_array.cpp  sparse_array.hpp
src/gameEngine/: Game.hpp  GameEngine.cpp  GameEngine.hpp  game.hpp
src/network/: Connection.hpp  INetworkClient.hpp  INetworkServer.hpp  INetworkSystem.hpp  NetworkClient.hpp  NetworkServer.hpp  Packet.hpp  PacketsQueue.hpp  Protocol.hpp
src/network_c/: Network.cpp  Network.hpp  NetworkSystem.cpp  NetworkSystem.hpp  NetworkSystems.cpp  SystemOUT.cpp  SystemOUT.hpp  TestClassPlayer.hpp  TestStructPlayer.cpp
src/network_s/: Containers.hpp  Network.cpp  Network.hpp  NetworkComponent.hpp  NetworkComponents.hpp  NetworkSystem.cpp  NetworkSystem.hpp  NetworkSystems.cpp  NetworkSystems.hpp  SystemIN.cpp  SystemIN.hpp
src/serge/: CMakeLists.txt  client  client.cpp  client2.cpp  important.txt  server  server.cpp
src/server/: CMakeLists.txt  Server.cpp  server.cpp  server.hpp
src/server/game/: CMakeLists.txt  Game.cpp  Game.hpp  GameEngineServer.cpp  GameEngineServer.hpp  game.cpp  game.hpp
src/server/gameEngine/: GameEngineServer.cpp  GameEngineServer.hpp
src/server/gameEngine/game/gameInitialisation/: initBullets.cpp  initEnemy.cpp  initMiscellaneous.cpp  initStarship.cpp
src/server/gameEngine/game/gameLogic/: animation.cpp  level1.cpp  miscellaneous.cpp  shoot.cpp
src/server/jsonfile/include/: JsonParser.hpp  comportment.hpp  jsonparser.hpp
src/server/jsonfile/src/: HandlingEcs.cpp  JsonParser.cpp  MapParser.cpp  MobParser.cpp  comportment_parser.cpp  handlingEcs.cpp  jsonparser.cpp  map_parser.cpp  mob_parser.cpp
src/server/network/: CMakeLists.txt  Network.cpp  Network.hpp  TestClassPlayer.cpp  TestStructPlayer.hpp  network.cpp  network.hpp  testClassPlayer.hpp
tests/: CMakeLists.txt  tests.cpp
(+195 files in other folders)
